# zoomies

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.dori/: context.json  file_history.json
.github/workflows/: pages.yml  python-publish.yml  tests.yml
benchmarks/: bench_handshake.py  bench_throughput.py
docs/: ROADMAP.md  pounce-integration.md
docs/design/: architecture.md  implementation-plan.md  primitives-first.md
examples/: README.md  h3_server_loop.py  parse_initial_packet.py  qpack_roundtrip.py  sans_io_connection.py  stream_echo.py
scripts/: generate_fixtures.py
site/config/_default/: build.yaml  content.yaml  external_refs.yaml  features.yaml  fonts.yaml  menu.yaml  outputs.yaml  params.yaml  search.yaml  site.yaml  theme.yaml
site/config/environments/: local.yaml  production.yaml
site/content/: _index.md
site/content/docs/: _index.md
site/content/docs/about/: _index.md  architecture.md  ecosystem.md
site/content/docs/concepts/: _index.md  connection-lifecycle.md  free-threading.md  http3.md  sans-io.md
site/content/docs/get-started/: _index.md  installation.md  quickstart.md
site/content/docs/reference/: _index.md  configuration.md  connection.md  events.md
site/content/docs/tutorials/: _index.md  echo-server.md
site/content/releases/: 0.1.0.md  0.1.1.md  0.2.0.md  _index.md
src/zoomies/: __init__.py  events.py
src/zoomies/contracts/: __init__.py  keys.py
src/zoomies/core/: __init__.py  configuration.py  connection.py  protocols.py  stream.py
src/zoomies/crypto/: __init__.py  _hkdf.py  protocol.py  quic_crypto.py  tls.py
src/zoomies/encoding/: __init__.py  buffer.py  bytes_.py  protocols.py  varint.py
src/zoomies/frames/: __init__.py  ack.py  common.py  connection_id.py  crypto.py  stream.py
src/zoomies/h3/: __init__.py  connection.py  qpack.py
src/zoomies/packet/: __init__.py  builder.py  header.py  rangeset.py  retry.py  transport_params.py
src/zoomies/primitives/: __init__.py  types.py
src/zoomies/recovery/: __init__.py  congestion.py  loss_detection.py  packet_space.py  rtt.py  sent_packet.py
tests/: conftest.py  test_adversarial.py  test_buffer.py  test_congestion_lifecycle.py  test_connection.py  test_connection_hygiene.py  test_connection_integration.py  test_contracts_keys.py  test_crypto_frame.py  test_frames.py  test_h3.py  test_hardening.py  test_import.py  test_interop.py  test_loss_recovery.py  test_packet.py  test_primitives.py  test_qpack.py  test_quic_crypto.py  test_recovery.py  test_recovery_integration.py  test_retry.py  test_stream.py  test_tls.py  test_utils.py  test_varint.py  utils.py
tests/fixtures/: ssl_cert.pem  ssl_key.pem
